--- a/sections/frontpage.tex
+++ b/sections/frontpage.tex
@@ -24,7 +24,7 @@
     \vspace{0.2cm}
     \begin{center}
     \Huge{\textbf{
-	\fullname
+	Turret Systems 101
     }}
     \end{center}
     \begin{center}
