--- a/sections/preface.tex
+++ b/sections/preface.tex
@@ -35,15 +35,15 @@
 \begin{minipage}[b]{0.45\textwidth}
  \centering
  \rule{\textwidth}{0.5pt}
-  Victor Haugan\\						
- {\footnotesize <vhauga14@student.aau.dk>}
+  Jonathan Magnussen\\						
+ {\footnotesize <jnma14@student.aau.dk>}
 \end{minipage}
 \hfill
 \vspace{3\baselineskip}
 \begin{minipage}[b]{0.45\textwidth}
  \centering
  \rule{\textwidth}{0.5pt}
-  Jonathan Magnussen\\ 
- {\footnotesize <jnma14@student.aau.dk>}
+  Michael Sebastian Søby\\ 
+ {\footnotesize <mss14@student.aau.dk>}
 \end{minipage}
 \end{center}
