--- a/sections/titlepages.tex
+++ b/sections/titlepages.tex
@@ -1,6 +1,6 @@
-{\selectlanguage{english} \pdfbookmark[0]{Title page}{label:titlepage_da}
+{\selectlanguage{danish} \pdfbookmark[0]{Title page}{label:titlepage_da}
 \aautitlepage{%
-  \englishprojectinfo{
+  \danishprojectinfo{
     \fullname %title
   }{%
     Design, definition and implementation of programming languages
@@ -16,10 +16,10 @@
     Jonas Ibrahim\\
     Emil Hedeholm Sørensen\\
     Simon Højberg\\
-    Victor Haugan
+    Michael Sebastian Søby
   }{%
     % list of supervisors
-	Giovanni Bacci 
+	Brian Nielsen
   }{%
     \today % date of completion
   }%
