--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -37,7 +37,7 @@
 \usepackage[utf8]{inputenc}
 % Make latex understand and use the typographic
 % rules of the language used in the document.
-\usepackage[english]{babel}
+\usepackage[danish]{babel}
 % Use the vector font Latin Modern which is going
 % to be the default font in latex in the future.
 \usepackage{lmodern}
