--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -1,1 +1,25 @@
-\chapter{Projectile Motion}
+\chapter{Projektil-fysik}
+Ved affyring af et projektil er det et antal informationer som er nødvendige for
+præcist at kunne ramme et mål. Disse informationer kommer i form af
+matematiske udregninger og fysiske forståelser. Dette er nødvendigt, da den
+producerede kanon har et begrænset udvalg af data til rådighed, som skal
+behandles og anvendes til at være i stand til at ramme det udvalgte mål.\nl
+
+På baggrund af denne problemstilling, vil dette kapitel vil blive brugt til, at
+redegøre for de fysikfaglige elementer, der er relevante for affyringen af et
+projektil. Dette vil hovedsageligt blive dækket ved at præsentere og forklare de
+fysiske formler der har at gøre med kasteparabler. Disse formler er udvalgt,
+da den vigtigste del af affyringen er, at udregne med hvilken kraft og vinkel
+projektilet skal affyres for effektivt at ramme et givent mål.\nl
+
+\section{Kasteparabel}
+For at kunne udregne et projektils kasteparabel, skal man have adgang til et
+antal informationer. Disse informationer er:
+\begin{itemize}
+  \item Starthastighed $v_0$ ($m/s$)
+  \item Affyringsvinkel $a$ ($grader$)
+  \item Tyngdeacceleationen $g$ ($m/s^2$)
+  \item 
+\end{itemize}
+
+
