--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -19,7 +19,14 @@ antal informationer. Disse informationer er:
   \item Starthastighed $v_0$ ($m/s$)
   \item Affyringsvinkel $a$ ($grader$)
   \item Tyngdeacceleationen $g$ ($m/s^2$)
-  \item 
+  \item Affyringshøjde $y_0$ ($m$)
+  \item Afstand $d$ ($m$)
+  \item Flyvnings-tid $t$ ($s$)
 \end{itemize}
 
+Med disse informationer kan vi gøre brug af videnen om
+
+\subsection{Diskussion: Luftmodstand}
+Denne subsection vil blive brugt til at diskutere hvorfor luftmodstanden kan
+ignoreres for den valgte type af projektil.
 
