--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -1,16 +1,16 @@
 \chapter{Projektil-fysik}
-Ved affyring af et projektil er det et antal informationer som er nødvendige for
-præcist at kunne ramme et mål. Disse informationer kommer i form af
-matematiske udregninger og fysiske forståelser. Dette er nødvendigt, da den
-producerede kanon har et begrænset udvalg af data til rådighed, som skal
-behandles og anvendes til at være i stand til at ramme det udvalgte mål.\nl
+Ved affyring af et projektil er det et antal informationer som er nÃ¸dvendige for
+prÃ¦cist at kunne ramme et mÃ¥l. Disse informationer kommer i form af
+matematiske udregninger og fysiske forstÃ¥elser. Dette er nÃ¸dvendigt, da den
+producerede kanon har et begrÃ¦nset udvalg af data til rÃ¥dighed, som skal
+behandles og anvendes til at vÃ¦re i stand til at ramme det udvalgte mÃ¥l.\nl
 
-På baggrund af denne problemstilling, vil dette kapitel vil blive brugt til, at
-redegøre for de fysikfaglige elementer, der er relevante for affyringen af et
-projektil. Dette vil hovedsageligt blive dækket ved at præsentere og forklare de
-fysiske formler der har at gøre med kasteparabler. Disse formler er udvalgt,
+PÃ¥ baggrund af denne problemstilling, vil dette kapitel vil blive brugt til, at
+redegÃ¸re for de fysikfaglige elementer, der er relevante for affyringen af et
+projektil. Dette vil hovedsageligt blive dÃ¦kket ved at prÃ¦sentere og forklare de
+fysiske formler der har at gÃ¸re med kasteparabler. Disse formler er udvalgt,
 da den vigtigste del af affyringen er, at udregne med hvilken kraft og vinkel
-projektilet skal affyres for effektivt at ramme et givent mål.\nl
+projektilet skal affyres for effektivt at ramme et givent mÃ¥l.\nl
 
 \section{Kasteparabel}
 For at kunne udregne et projektils kasteparabel, skal man have adgang til et
@@ -19,12 +19,18 @@ antal informationer. Disse informationer er:
   \item Starthastighed $v_0$ ($m/s$)
   \item Affyringsvinkel $a$ ($grader$)
   \item Tyngdeacceleationen $g$ ($m/s^2$)
-  \item Affyringshøjde $y_0$ ($m$)
+  \item AffyringshÃ¸jde $y_0$ ($m$)
   \item Afstand $d$ ($m$)
   \item Flyvnings-tid $t$ ($s$)
 \end{itemize}
 
-Med disse informationer kan vi gøre brug af videnen om
+Hvis man undtager luftmodstanden kan man ved hjÃ¦lp af disse informationer
+opstille en rÃ¦kke udsagn:\nl
+Efter projektilet er affyret vil det ikke vÃ¦re pÃ¥virket af andre eksterne
+krafter en tyngdekraften. Derfor kan dens hastighed langs x-aksen skrives som:
+$v_x = v_0 * cos(a)$\nl
+
+Dette udsagn passer ogsÃ¥ pÃ¥ 
 
 \subsection{Diskussion: Luftmodstand}
 Denne subsection vil blive brugt til at diskutere hvorfor luftmodstanden kan
