--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -30,7 +30,12 @@ Efter projektilet er affyret vil det ikke være påvirket af andre eksterne
 krafter en tyngdekraften. Derfor kan dens hastighed langs x-aksen skrives som:
 $v_x = v_0 * cos(a)$\nl
 
-Dette udsagn passer også på 
+Dette udsagn passer også på\ldots \nl
+
+Mere tekst\ldots \nl
+
+Disse udregninger giver os så formlen:\nl
+$v_t = (\frac{v_0\ *\ cos(a)}{-g\ *\ t\ +\ v_0\ *\ sin(a)})$
 
 \subsection{Diskussion: Luftmodstand}
 Denne subsection vil blive brugt til at diskutere hvorfor luftmodstanden kan
