--- a/sections/titlepages.tex
+++ b/sections/titlepages.tex
@@ -6,9 +6,9 @@
     Design, definition and implementation of programming languages
 	%theme
   }{%
-    Spring 2016 %project period
+    Fall 2016 %project period
   }{%
-    SW406F16 % project group
+    SW570E16 % project group
   }{%
     % list of group members
     Christoffer Mouritzen\\
