--- a/sections/Requirements/Scenario.tex
+++ b/sections/Requirements/Scenario.tex
@@ -1,12 +1,42 @@
-\section{Scenario1}
+\section{Scenarios}
+\subsection{Scenario1 - Tracking}
 
 Den bliver sat på en plan overflade og derefter tændt ved at trykke på en knap.
 
 Den begynder nu at langsomt at dreje 45 grader til hver side fra sit udgangs
 punkt. 
 
-Den ser bevægelse i baggrunden og begynder at følge målet som bevæger sig
-uden om turreten. Målet bliver ved med at holde en vis distance til turreten.
+Den ser bevægelse i baggrunden og begynder at følge målet som bevæger sig i en
+bue 2 meter uden om turreten. Målet bliver ved med at holde en vis
+distance til turreten.
+
 Turreten følger målet indtil det har bevæget sig mere end 60 grader væk fra
 nulpunkts vinklen. Turreten går da tilbage til nulpunkts vinklen.
 
+\subsection{scenario2 - Idle}
+
+Den bliver sat på en plan overflade og derefter tændt ved at trykke på en knap.
+
+Den begynder nu at langsomt at dreje 45 grader til hver side fra sit udgangs
+punkt.
+
+Den ser ingen bevægelse og forsætter med at dreje 45 grader til hver side.
+
+\subsection{scenario3 - Shooting}
+
+Den bliver sat på en plan overflade og derefter tændt ved at trykke på en knap.
+
+Den begynder nu langsomt at dreje 45 grader til hver side fra sit udgangspunkt.
+
+Der ser bevægelse i baggrunden og begynder at følge målet. Den finder frem til
+at målet er kommet ind i dens killzone.
+
+Den begynder nu at observere og derefter forudsige hvor målet ved være om kort
+tid. 
+
+Efter dette er beregnet stiller den sig op så den vil kunne ramme målet når den
+skyder.
+
+Den gentager nu dette indtil målet har bevæget sig uden for rækkevidde,
+hvorefter den stopper med at skyde. Hvis målet ikke bevæger sig videre,
+forsætter den med at følge målet. Ellers går den tilbage til at idle.
