--- a/sections/frontpage.tex
+++ b/sections/frontpage.tex
@@ -39,7 +39,7 @@
   \vspace{4 cm}
   \begin{center}
     {\large
-      Projekt Rapport%Insert document type (e.g., Project Report)
+      Project Report%Insert document type (e.g., Project Report)
     }\\
     \vspace{0.2cm}
     {\Large
