--- a/sections/titlepages.tex
+++ b/sections/titlepages.tex
@@ -1,9 +1,9 @@
-{\selectlanguage{danish} \pdfbookmark[0]{Title page}{label:titlepage_da}
+{\selectlanguage{english} \pdfbookmark[0]{Title page}{label:titlepage_en}
 \aautitlepage{%
-  \danishprojectinfo{
+  \englishprojectinfo{
     \fullname %title
   }{%
-    Design, definition and implementation of programming languages
+    Embeded Systems
 	%theme
   }{%
     Fall 2016 %project period
