--- a/setup/preamble.tex
+++ b/setup/preamble.tex
@@ -172,8 +172,8 @@
 	%pdfpagelabels=true,%
 	plainpages=false,%
 	pdfauthor={Christoffer Mouritzen, Emil Hedeholm Sørensen, Simon Højberg, Jonas
-	Ibrahim, Victor Haugan, Jonathan Magnusen},%
-	pdftitle={BTR},%
+	Ibrahim, Michael Sebastian Søby, Jonathan Magnusen},%
+	pdftitle={Turret Systems 101},%
 	pdfsubject={},%
 	bookmarksnumbered=true,%
 	colorlinks,%
