--- a/sections/titlepages.tex
+++ b/sections/titlepages.tex
@@ -1,7 +1,7 @@
 {\selectlanguage{english} \pdfbookmark[0]{Title page}{label:titlepage_en}
 \aautitlepage{%
   \englishprojectinfo{
-    \fullname %title
+    Turret Systems 101 %title
   }{%
     Embeded Systems
 	%theme
