--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -1,1 +1,12 @@
-\input{sections/PhysTheory/ProjectileMotion.tex}
+%Introduction
+\input{sections/HWSelection/PlatformChoise/PlatformChoise.tex}%NXT v. Arduino
+%	Test of sensors 
+%	Motor
+%		DC v. Servo
+%	``Final'' choise of hardware
+\input{sections/PhysTheory/ProjectileMotion.tex}%Physics of shooting
+%Turret design choises
+%	Different itterations of the turret
+%Testing
+%	Software
+%	Hardware and implicitly the software
