--- a/sections/HWSelection/PlatformChoise/PlatformChoise.tex
+++ b/sections/HWSelection/PlatformChoise/PlatformChoise.tex
@@ -1,2 +1,3 @@
 \chapter{Choise of Platform}
 \input{sections/HWSelection/Sensors/SensorTest.tex}
+\input{sections/HWSelection/Motor/MotorChoise.tex}
