--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -1,4 +1,4 @@
-%Introduction
+\inputS{Introduction}%Introduction
 \input{sections/HWSelection/PlatformChoise/PlatformChoise.tex}%NXT v. Arduino
 %	Test of sensors 
 %	Motor
