Divided up into parts(not final at all)

--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -1,12 +1,15 @@
 \inputS{Introduction}%Introduction
+\part{Analysis}
 \input{sections/HWSelection/PlatformChoise/PlatformChoise.tex}%NXT v. Arduino
 %	Test of sensors 
 %	Motor
 %		DC v. Servo
 %	``Final'' choise of hardware
+\part{Testing}
 \input{sections/PhysTheory/ProjectileMotion.tex}%Physics of shooting
 %Turret design choises
 %	Different itterations of the turret
 %Testing
 %	Software
 %	Hardware and implicitly the software
+%Conclusion/perspektivering/reflektion
