--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -1,33 +1,36 @@
 \chapter{Projektil-fysik}
-Ved affyring af et projektil er det et antal informationer som er nødvendige for
-præcist at kunne ramme et mål. Disse informationer kommer i form af
-matematiske udregninger og fysiske forståelser. Dette er nødvendigt, da den
-producerede kanon har et begrænset udvalg af data til rådighed, som skal
-behandles og anvendes til at være i stand til at ramme det udvalgte mål.\nl
+When fireing a projectile there some information is needed in order to hit a
+target. These informations consists of calculations and an understanding of the
+physics that go into fireing a projectile. This is necessary due to the fact
+that the canon has a limited amount of input that needs to be processed in order
+to hit the target.
 
-På baggrund af denne problemstilling, vil dette kapitel vil blive brugt til, at
-redegøre for de fysikfaglige elementer, der er relevante for affyringen af et
-projektil. Dette vil hovedsageligt blive dækket ved at præsentere og forklare de
-fysiske formler der har at gøre med kasteparabler. Disse formler er udvalgt,
-da den vigtigste del af affyringen er, at udregne med hvilken kraft og vinkel
-projektilet skal affyres for effektivt at ramme et givent mål.\nl
+Based on this problem, this chapter will be used to explain the physics needed
+to fire the projectile. This will mainly be covered by presenting and explaining
+the equations used to calculate the projectile motion. These equations has been
+chosen du to tha fact that calculating the force and angle of the projectile is
+the most important part when fireing a projectile in order to hit a target.\nl
+
 
 \section{Kasteparabel}
 For at kunne udregne et projektils kasteparabel, skal man have adgang til et
 antal informationer. Disse informationer er:
+
+To be able to calculate the projectile motion, a number of informations i
+needed. These informations are:
 \begin{itemize}
-  \item Starthastighed $v_0$ ($m/s$)
-  \item Affyringsvinkel $a$ ($grader$)
-  \item Tyngdeacceleationen $g$ ($m/s^2$)
-  \item Affyringshøjde $y_0$ ($m$)
-  \item Afstand $d$ ($m$)
-  \item Flyvnings-tid $t$ ($s$)
+  \item Starting velocity $v_0$ ($m/s$)
+  \item Angle of fire $a$ ($degrees$)
+  \item Gravitational accelleration $g$ ($m/s^2$)
+  \item Height of fireing $y_0$ ($m$)
+  \item Distance $d$ ($m$)
+  \item Time in the air $t$ ($s$)
 \end{itemize}
 
-Hvis man undtager luftmodstanden kan man ved hjælp af disse informationer
-opstille en række udsagn:\nl
-Efter projektilet er affyret vil det ikke være påvirket af andre eksterne
-krafter en tyngdekraften. Derfor kan dens hastighed langs x-aksen skrives som:
+If air drag is excluded, a number of statements can be made based on these
+informations:\nl
+When the projectile is fires it is not affected by any external forces other
+than the gravity. This means that the velocity can be calculated as:
 $v_x = v_0 * cos(a)$\nl
 
 Dette udsagn passer også på\ldots \nl
