--- a/sections/HWSelection/Sensors/SensorTest.tex
+++ b/sections/HWSelection/Sensors/SensorTest.tex
@@ -1,4 +1,14 @@
 \section{Sensor Testing}
+To find out which sensors are the best to use, this chapter will be used to test
+the different sensors. The testing of the sensors will also be used to test how
+precise they are.\nl
+
+First the testing testing methodology will be explained, then this methodology
+will be used to devise tests for the different sensors. 
+
+\subsection{Testing Methodology}
+The testing will be divided into to two parts, one part is testing the two
+distance sensors and the second part is testing the camera. 
 
 \subsection{Ultrasonic Sensor}
 
