--- a/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
@@ -1,15 +1,23 @@
 \section{Embedded Systems}
-
 introduction - something something
 
 This section will be used to give an give an overview of how machine
-intelligence and real-time systems will be used.
+intelligence and real-time systems will be used and what an embedded system
+is.\\
 
-small devices everywhere doing their very own job, having access to limited
-memory and little computing power.
-Comes with its own mix of software, hardward and mechanical parts.
+A embedded system is a device with limited resources both in terms of computer
+power and how much memory it has \PS. They are used everywhere to do small task
+and jobs \PS.\\
 
+When working with a embedded system there are different problems to overcome
+when it comes to how the software needs to be programed and how to work with the
+limited resources of the system \PS.\\
 
-problems with with ES(embedded systems)
-noget MI
-Noget RTS
+% small devices everywhere doing their very own job, having access to limited
+% memory and little computing power.
+% Comes with its own mix of software, hardward and mechanical parts.
+% 
+% 
+% problems with with ES(embedded systems)
+% noget MI
+% Noget RTS
