--- a/sections/sensorTheory.tex
+++ b/sections/sensorTheory.tex
@@ -3,7 +3,7 @@
 Virker ved at den sender lyd ud af en af de to huller, hvor det andet modtager
 lyd bølgerne som bliver kastet tilbage fra et object, på den måde kan den
 udregne afstanden mellem sensoren og objektet ved at halverer tiden det tager
-fra den udsender lyden til den modtager det tilbagekastet lyd.
+fra den udsender lyden til den modtager det tilbagekastet lyd \PS.
 
 (To be conntiued)
 
@@ -13,7 +13,7 @@ i stedet for at måle hvor lang tid der går, så gør den brug af intentiviten 
 lyset der bliver kast tilbage til at udregner hvr langt væk et objekt er. Hvs
 der ingen lys på den bestemmet bølgelængde som der bliver opfanget af lys
 sensren inde i den infrarøde sensor så er der ingen objekt foran den, mens hvis
-der er et objekt meget tæt på kommer der meget lys tlbage. 
+der er et objekt meget tæt på kommer der meget lys tlbage \PS. 
 
 
 
