--- a/setup/chapters.tex
+++ b/setup/chapters.tex
@@ -1,10 +1,14 @@
 \inputS{Introduction}%Introduction
 \part{Analysis}
 \input{sections/HWSelection/PlatformChoise/PlatformChoise.tex}%NXT v. Arduino
+
 %	Test of sensors 
 %	Motor
 %		DC v. Servo
 %	``Final'' choise of hardware
+\input{sections/Requirements/Scenario.tex}
+
+
 \part{Testing}
 \input{sections/PhysTheory/ProjectilePhysics.tex}%Physics of shooting
 %Turret design choises
