Add embeddeded system bib entry

--- a/bib/lib.bib
+++ b/bib/lib.bib
@@ -5,3 +5,10 @@
   note = {seen 29/02/2016},
   howpublished = {\url{http://robocode.sourceforge.net/docs/ReadMe.html}}
 }
+
+@article{vahid1999embedded,
+  title={Embedded system design: a unified hardware/software approach},
+  author={Vahid, Frank and Givargis, Tony},
+  journal={Department of Computer Science and Engineering University of California},
+  year={1999}
+}
