--- a/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/EmbeddedSystems/EmbeddedSystemsOverview.tex
@@ -1,5 +1,39 @@
 \section{Embedded Systems}
-introduction - something something
+introduction - As most people are probably aware of, computers have become an integral part of our modern society,
+and rapidly changing the way we do things. When most people say computers, they talk about the class of computers
+known as desktops, laptops, servers and tablets. But there is an entire class of computers surrounding us in much greater numbers,
+although their presence is a lot more incognito. The computers are built into larger electronic deviced.
+This class of computer systems is also known as Embedded Systems.
+
+What is an embedded system?
+
+Coming up with an exact definition of an embedded system is a hard task, but \citep{vahid1999embedded} gives a crude
+definition of a Embedded System as follows: \nl
+
+An  embedded  system  is  nearly  any computing system other than a desktop, laptop, or  mainframe  computer.
+
+Although is definition is very crude, it at least gives a starting point from which embedded systems can be observed.
+By examining some common types of embedded systems we can try to further understand these systems.\nl
+
+So what are embedded systems. These can be found in a variety of different electronic devices such as
+\begin{itemize}
+\item Consumer electronics - calculators, cellphones(smartphones ofc), digital cameras, camcorders, handheld gaming devices
+\item Home Appliances - Washing machine, tumbledryer, thermostats, home security systems, and lighting systems(device that controls lights in a home)
+\item Office automation equipment - Copymachine, printer, scanner, fax machine
+\item Business equipment -
+\item Automobiles - There is a lot of embedded systems in a typical car today - the ABS-brakes of a modern car is a very typical
+example of not only a embedded system, but also a Real-Time-System, which will be explained later
+\end{itemize}
+
+
+
+Intro - fluff
+What is a embedded system
+Types of ES - mission critical(Rts?)
+Typical Embedded SYstems - components, microprocessor???
+Reliability
+Limited Resources(memory, cpu, power consumption etc)
+
 
 This section will be used to give an give an overview of how machine
 intelligence and real-time systems will be used and what an embedded system
@@ -15,9 +49,9 @@ limited resources of the system \PS.\\
 
 % small devices everywhere doing their very own job, having access to limited
 % memory and little computing power.
-% Comes with its own mix of software, hardward and mechanical parts.
-% 
-% 
+% Comes with its own mix of software, hardware and mechanical parts.
+%
+%
 % problems with with ES(embedded systems)
 % noget MI
 % Noget RTS
