--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -1,21 +1,10 @@
 længere forklaringer
-\section{Projectile Motion}
+\section{Projectile Motion}\label{ProjMotion}
 When fireing a projectile it is possible to determine its exact trajectory by
 using the formula for projectile motion. This formula can be used to map the
-projectiles location over a given time frame. This is done using the following
-information:
-\begin{itemize}
-  \item $v_0$ ($m/s$) - Starting Velocity 
-  \item $a$ ($degrees$) - Angle of Fire 
-  \item $g$ ($m/s^2$) - Gravitational Acceleration 
-  \item $y_0$ ($m$) - Height of Fireing 
-  \item $y$ ($m$) - height
-  \item $x$ ($m$) - distance
-  \item $t$ ($s$) - Time
-\end{itemize}
-
-The equations used for determining the height and length of the shot at any
-given time are:
+projectiles relative location to the turret over a given time frame. This
+formula is split into two parts for calculating the x- and y-coordinate
+respectively. The formulas are as follows:
 \begin{equation}\label{slength}
 x=v_0*cos(a)*t
 \end{equation}
@@ -23,23 +12,60 @@ x=v_0*cos(a)*t
 y=v_0*sin(a)*t-\frac{1}{2}*g*t^2
 \end{equation}
 
-\subsection{Calculating length}
-Using \autoref{sheight} it is possible to isolate \textbf{t}. This can then
-substitute t in \autoref{slength}. This gives the equation:
-\begin{equation}
+The formulas use the following variables:
+\begin{itemize}
+  \item $v_0$ ($m/s$) - Starting Velocity 
+  \item $a$ ($degrees$) - Angle of Fire 
+  \item $g$ ($m/s^2$) - Gravitational Acceleration 
+  \item $x$ ($m$) - distance
+  \item $t$ ($s$) - Time
+\end{itemize}
+In addition, the following variables are used in the following sections:
+\begin{itemize}
+  \item $y_0$ ($m$) - Height of Fireing 
+  \item $y$ ($m$) - height
+\end{itemize}
+
+It should be noted that the formulas \autoref{slength} and \autoref{sheight} do
+not take into accound any effect air resistance could have on the projectiles
+trajectory. The topic of air resistance and the relevance thereof is discussed
+in \autoref{AirResDisc}.
+
+\subsection{Calculating Distance}
+In order to calculate the distance at which the projectile will touch the groud
+we need to combine the expressions in order to express the height $\textbf{y}$
+as a function of the horizontal distance $\textbf{x}$. The first step is to take
+\autoref{slength} and express the time $\textbf{t}$ as a function of the
+horizontal distance $\textbf{x}$. This is done as the resulting expression can
+be substituted into \autoref{sheight}. Doing this gives the equation:
+\begin{equation}\label{FinEq}
 x\ =\ v*cos(a)*\frac{v*sin(a)+\sqrt{v^2*sin(a)^2-2*g*y}}{g}
 \end{equation}
 
-This can then be used to calculate the maximum distance the projetile can
-travel.
+As such \autoref{FinEq} can be used to calculate the distance the projectile can
+travel on any given shot.
 
-figur af turret og kasteparabel
-forklaring af hvordan ændring af hastighed og vinkel påvirker skuddet
-\subsection{tid}
-noget om tid
-\begin{equation}
-t=\frac{x}{v_0*cos(a)}
-\end{equation}
+\subsection{Angle-Distance Relation}
+When fireing a projectile the turret has one primary variable it can use to aim
+namely the angle at which the projectile is fired. This variable is
+theoretically enough to accurately fire the turret, but it does present some
+problems when it comes to calculating the trajectory and the offset needed for
+targets in motion.\nl
+
+Given a constant initial velocity of the projectile, the distance travelled and
+air time is proportional to the fireing angle. This relation is shown in
+\autoref{FinEq} where $\textbf{cos(a)}$ and $\textbf{sin(a)}$ are used as
+coeffecients. The relation between fireing angle and travelled distance is
+exemplified in \autoref{ProjMot}.
+
+\figx[0.25]{ProjMot}{Distance relative to angle of fire.}
+% figur af turret og kasteparabel
+% forklaring af hvordan ændring af hastighed og vinkel påvirker skuddet
+% \subsection{tid}
+% noget om tid
+% \begin{equation}
+% t=\frac{x}{v_0*cos(a)}
+% \end{equation}
 %This gives the
 % equation:
 % \begin{equation}\label{time}
